--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.6",
     "@material-tailwind/react": "^1.2.3",
     "@reduxjs/toolkit": "^1.8.4",
     "axios": "^0.27.2",
