--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.6.6",
+    "@heroicons/react": "^1.0.6",
     "@material-tailwind/react": "^1.2.3",
     "@reduxjs/toolkit": "^1.8.4",
     "axios": "^0.27.2",
